# econ-explore

./: .gitignore  CLAUDE.md  pyproject.toml  requirements.txt  setup.py
apps/ability_bias/: app.py
apps/clt_demo/: app.py
apps/human_capital/: app.py
apps/labour_demand/: app.py
apps/labour_supply/: app.py
apps/oaxaca_blinder/: app.py
apps/power_explorer/: app.py
apps/power_explorer/scenarios/: __init__.py  one_sample_mean.py  proportion.py  regression_slope.py  two_sample_mean.py
apps/power_explorer/ui/: distributions.py  education.py  power_curve.py
apps/signalling/: app.py
apps/statistical_discrimination/: app.py
apps/tax_incidence/: app.py
multipage/: Home.py
multipage/pages/: 01_Power_Explorer.py  02_CLT_Demo.py  03_Oaxaca_Blinder.py  04_Tax_Incidence.py  05_Human_Capital.py  06_Labour_Demand.py  07_Labour_Supply.py  08_Ability_Bias.py  09_Signalling.py  10_Statistical_Discrimination.py
shared/: base.py  plotting.py  simulation.py  stats_utils.py  ui.py
tests/test_ability_bias/: test_ability_bias.py
tests/test_clt_demo/: test_clt.py
tests/test_human_capital/: test_human_capital.py
tests/test_labour_demand/: test_labour_demand.py
tests/test_labour_supply/: test_labour_supply.py
tests/test_oaxaca_blinder/: test_oaxaca.py
tests/test_power_explorer/: test_scenarios.py
tests/test_shared/: test_stats_utils.py
tests/test_signalling/: test_signalling.py
tests/test_statistical_discrimination/: test_statistical_discrimination.py
tests/test_tax_incidence/: test_tax.py
