[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "econ-explore"
version = "0.1.0"
description = "Interactive economics & econometrics explorer"
requires-python = ">=3.9"
dependencies = [
    "streamlit>=1.30.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[tool.setuptools.packages.find]
include = ["shared*", "apps*", "multipage*"]
